--- a/styles.css
+++ b/styles.css
@@ -4,18 +4,13 @@
     box-sizing: border-box;
 }
 
-html{
-    width: 100%;
-}
 
-body { min-height: 100vh; 
-        min-width: 100%;
-        border: 1px solid red;}
+
 #root{
-    height: 99vh;
+  width: 100vw;
+    height: 100vh;
     overflow: scroll;
     position: relative;
-    /* background-color: aquamarine; */
 }
 
 #root::-webkit-scrollbar {
@@ -23,11 +18,12 @@ body { min-height: 100vh;
 }
 
 #canvas{
-    width: 100%;    
+    width: 100vw;    
+    height: 100vh;
     /* background-color: antiquewhite; */
     position: relative;
-    /* z-index: -1; */
 }
+
 #top{
     width: 99vw;
     display: flex;
@@ -36,8 +32,10 @@ body { min-height: 100vh;
     position: fixed;
     padding: 0.16rem 0.16rem 0rem 0rem;
     margin: 0.62rem 0.16rem 0.125rem 0.50rem;
-    border: 1px solid green;
+    /* border: 1px solid green; */
+    z-index: 100;
   }
+
 #topLeft>div{
     cursor: pointer;
 }
@@ -49,22 +47,24 @@ body { min-height: 100vh;
     background-color: #e4e1e1;
 }
 .lightbghover:hover{
-   
     background-color: #eeeded;
-    /* background-color: red; */
 }
   button{
     background-color: transparent;
     border: none;
   }
+
   #topCenter{
     display: flex;
     align-items: center;
     justify-content:space-evenly;
     overflow-x: scroll;
-    box-shadow: 3px 2px 2px #e1e1e1;
-    border-radius: 10px;    
+    padding: 5px;
+    box-shadow: 3px 2px 2px #e4e1e1;
+    border-radius: 10px;  
+    gap: 2px;  
   }
+
   #colorPicker{
     width: 25px !important;
     margin-right: 3px;
@@ -122,8 +122,7 @@ Button,.option{
     width: 85px;
 }
 #LibraryButton:hover{
-    background-color: #eeeded;
-    
+    background-color: #eeeded;    
 }
 .tooltip {
     background-color: white;
