--- a/styles.css
+++ b/styles.css
@@ -169,3 +169,23 @@ Button,.option{
     border-radius: 5px;
     padding: 4px;
   }
+  .active {
+    background-color: #3a34eb;
+    border-radius: 4px;
+    color: white;
+}
+.form {
+  position: fixed;
+  left: 10px;
+  top: 30vh ;
+  border: 1px solid #ededed;
+  padding: 20px; 
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
+}
+
+.hide {
+  display: none;
+}
