Feat:add rectangle circle eraser line btn functionality

--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,7 @@
 
 #topLeft>div{
     cursor: pointer;
+    background-color: #fff;
 }
 #topLeftBtn{
     padding: 4px;
@@ -62,7 +63,8 @@
     padding: 5px;
     box-shadow: 3px 2px 2px #e4e1e1;
     border-radius: 10px;  
-    gap: 2px;  
+    gap: 2px;
+    background-color: #fff;  
   }
 
   #colorPicker{
@@ -101,6 +103,7 @@ Button,.option{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    background-color: #fff;
     
   }
 .material-symbols-outlined{
@@ -149,12 +152,14 @@ Button,.option{
     justify-content: space-around;
     margin-left: 0.50rem;
     bottom: 0px;
+  
   }
   #bottomright{
     position: fixed;
     bottom: 0px;
     right: 0px;
     margin: 5px;
+    background-color: #fff;
   }
   .zoom{
     display: flex;
@@ -186,6 +191,36 @@ Button,.option{
   align-items: center;
 }
 
+
 .hide {
   display: none;
+}
+
+#strokewidth>button{
+  width: 25px;
+  height: 25px;
+  background-color: #ededed;
+  border-radius: 5px;
+}
+#strokewidth>button:hover{
+  border: 1px solid rgb(39, 38, 38);
+}
+.border{
+  border: 1px solid blue;
+}
+#strokestyle>button:hover, #fillbackground>button:hover,#edge>div:hover,#fill>div:hover{
+  border: 1px solid rgb(39, 38, 38);
+}
+#strokestyle>button, #fillbackground>button,#edge>button, #fill>button{
+  width: 25px;
+  height: 25px;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+}
+#edge,#strokestyle,#fillbackground,#fill{
+  display: flex;
+  gap: 3px;
 }
